--- a/frontend/admin_browser/package.json
+++ b/frontend/admin_browser/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "classnames": "^2.5.1",
     "icons": "^1.0.0",
     "next": "15.3.2",
     "react": "^19.1.0",
