--- a/frontend/application/package.json
+++ b/frontend/application/package.json
@@ -42,7 +42,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.13.5",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "@react-native-community/datetimepicker": "8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
