--- a/frontend/admin_browser/package.json
+++ b/frontend/admin_browser/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "victory": "^37.3.6",
     "zustand": "^5.0.4"
   },
