--- a/frontend/application/tsconfig.json
+++ b/frontend/application/tsconfig.json
@@ -17,7 +17,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "hooks/login"
+  ],
   "exclude": [
     "node_modules",
     "babel.config.js",
