--- a/frontend/application/package.json
+++ b/frontend/application/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -49,7 +48,8 @@
     "toast": "^0.5.4",
     "victory": "^37.3.6",
     "victory-native": "^41.17.1",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
